@@ -39,12 +39,12 @@
           </label>
         </a></li>
 
-        <!--li><a href="#">
+        <li><a href="#">
           <label class="checkbox checkboxLabel">
-            <input class="css-checkbox" type="checkbox" id="checkInactive">
-            <label class="css-label"></label>Inactive
+            <input class="css-checkbox" type="checkbox" id="checkSystem">
+            <label class="css-label"></label>System applications
           </label>
-        </a></li>-->
+        </a></li>
       </ul>
 
       <!--
