@@ -4,7 +4,6 @@
   <span class="icon_arangodb_settings2" alt="Edit application properties" title="Edit application properties"></span>
   <span class="icon_arangodb_info" title="Show API documentation"></span>
 </div>
-
 <img src="foxxes/thumbnail/<%=attributes.app %>" height="50" width="50" alt="" class="icon">
 <%if (attributes.development) {%>
   <div class="tileBadge">
